added list and detail page

--- a/src/app/_sass/abstracts/_variables.scss
+++ b/src/app/_sass/abstracts/_variables.scss
@@ -3,4 +3,5 @@ $background-purple: #3a0a72;
 $color-whiteblue: #59aff1;
 $color-blackish: #2c1141;
 
-$color-whiteblue_state: #bbe1ff;
+$color-whiteblue-state: #bbe1ff;
+$color-blackish-state: #8045ad;
