--- a/src/app/pages/HomePage.scss
+++ b/src/app/pages/HomePage.scss
@@ -7,7 +7,7 @@
         }
     }
     & .recent-list {
-        margin: 30px 0;
+        margin: 30px 0 60px;
         &-item {
             color: $color-whiteblue-state;
             margin-bottom: 30px;
@@ -59,15 +59,16 @@
                 }
             }
         }
-        & .full-collection-btn {
-            font-size: 1.2rem;
-            background-color: $color-blackish;
-            color: $color-whiteblue;
-            transition: all 0.3s ease-in-out;
-            &:hover {
-                background-color: $color-blackish-state;
-                color: $color-whiteblue-state;
-            }
+    }
+    & .full-collection-btn,
+    & .register-btn {
+        font-size: 1.2rem;
+        background-color: $color-blackish;
+        color: $color-whiteblue;
+        transition: all 0.3s ease-in-out;
+        &:hover {
+            background-color: $color-blackish-state;
+            color: $color-whiteblue-state;
         }
     }
 }
